// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a button using an external to target 1`] = `
<div>
  <a
    class="usa-button"
    href="https://google.com"
  >
    Button Text
  </a>
</div>
`;

exports[`should render a button using an internal to target 1`] = `
<div>
  <a
    class="usa-button"
    href="/bogus"
  >
    Button Text
  </a>
</div>
`;
